# ball-quant

./: CHANGELOG.md  Dockerfile  MIGRATION.md  README.md  docker-compose.yml
ball-quant-main/: .gitignore  pyproject.toml  setup.cfg
ball-quant-main/src/ball_quant/: __init__.py  diagnostics.py
ball-quant-main/src/ball_quant/adapters/: api_football.py  http.py  polymarket.py  ticai.py
ball-quant-main/src/ball_quant/core/: analysis.py  snapshot.py  staking.py  value.py
ball-quant-main/tests/: test_probability_and_combo.py
ball-quant-refactor-data-service/: .dockerignore  .gitignore  CHANGELOG.md  Makefile  REFACTOR_PLAN.md  pyproject.toml
ball-quant-refactor-data-service/examples/: sample_polymarket.json
ball-quant-refactor-data-service/scripts/: forecast_capture.sh  nightly_backtest.sh
ball-quant-refactor-data-service/skills/ball-analysis/: JCZQ_RULES.md  SKILL.md
ball-quant-refactor-data-service/src/ball_quant/adapters/: sporttery.py
ball-quant-refactor-data-service/src/ball_quant/backtest/: engine.py  replay.py
ball-quant-refactor-data-service/src/ball_quant/core/: analysis.py  forecast_ledger.py  handicap.py  match_join.py  metrics.py  (+3 more)
ball-quant-refactor-data-service/tests/: test_all_markets.py  test_bundle_elo.py  test_c500.py  test_devig_e2e.py  test_optimize.py  test_real_pricing.py  test_schedule.py  test_settlement.py  test_soft_calibration.py  test_strength_prior.py  test_ticai.py
ball-quant-refactor-data-service/tests/fixtures/: api_football_fixture.json  c500_crs.html  c500_hafu.html  polymarket_c500_test.json  sporttery_calc.json
(+73 files in other folders)
