[metadata]
name = ball-quant
version = 0.1.0
description = Daily football betting market research system for Polymarket, China Sports Lottery SP, probability mapping, EV, and portfolio staking.
long_description = file: README.md
long_description_content_type = text/markdown
author = Codex

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ballq = ball_quant.cli:main

